# decmap_ai-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  dependencies.py  rate_limit.py  scheduler.py
app/models/: events.py  requests.py  responses.py
app/providers/embedding/: base.py  factory.py  openai_provider.py
app/providers/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
app/repositories/: base.py  cluster_repository.py  problem_repository.py  tag_repository.py
app/routers/: clustering.py  health.py  hooks.py  similarity.py  websocket.py
app/services/: clustering_service.py  similarity_service.py  solution_service.py  spam_filter_service.py  translation_service.py  websocket_service.py
database/: alembic.ini
database/migrations/: env.py
database/migrations/versions/: 001_add_pgvector_and_embeddings.py
docker/: Dockerfile  build.sh
scripts/: smoke-test.sh
tests/: conftest.py
tests/contract/: test_embedding_provider_contract.py  test_llm_provider_contract.py
tests/fakedata/: clusters.json
tests/fixtures/: clusters.json  problems.json
tests/unit/: test_scheduler.py  test_security.py
tests/unit/providers/: test_embedding_factory.py
tests/unit/services/: test_clustering_service.py  test_similarity_service.py  test_spam_filter_service.py  test_translation_service.py
